[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ext/buttonBlue_2.png" type="Texture" id=1]
[ext_resource path="res://Screens/ScreenWebWarning/ScreenWebWarning.gd" type="Script" id=2]
[ext_resource path="res://Fonts/NotoSerif-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Ext/buttonBlue_1.png" type="Texture" id=4]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/OptionsFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Graphics/Common DialogBox.png" type="Texture" id=7]
[ext_resource path="res://Screens/ScreenWithMenuElements.tscn" type="PackedScene" id=8]
[ext_resource path="res://stepmania-compat/smQuad.gd" type="Script" id=9]
[ext_resource path="res://MenuSounds/Assets_Sounds_Click.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 29
outline_size = 1
outline_color = Color( 0, 0.0823529, 0.623529, 1 )
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 3 )

[node name="ScreenWebWarning" instance=ExtResource( 8 )]
script = ExtResource( 2 )
PrevScreen = "CutsceneFromFile"
NextScreen = "CutsceneFromFile"
HandlePhysicalAButton = true

[node name="smQuad" type="ColorRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )

[node name="DialogueActorFrame2" type="TextureRect" parent="." index="1"]
self_modulate = Color( 0.462745, 0.886275, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 1456.0
margin_bottom = 540.0
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="DialogueActorFrame2" index="0"]
visible = false
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 6 )
text = "Before you begin..."
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueActorFrame2" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -293.5
margin_right = 576.0
margin_bottom = 293.5
custom_constants/separation = 40
__meta__ = {
"_edit_group_": true
}

[node name="Label3" type="Label" parent="DialogueActorFrame2/VBoxContainer" index="0"]
margin_right = 1152.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 5 )
text = "The web version of F.M. RepliCant doesn't have music and has framerate issues. You can consider it a demo of sorts.
If you liked it, give the full desktop & mobile version a try!"
autowrap = true

[node name="OKButton" type="TextureButton" parent="DialogueActorFrame2" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.5
margin_top = -180.0
margin_right = 91.5
margin_bottom = -116.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DialogueActorFrame2/OKButton" index="0"]
margin_right = 184.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Begin"
align = 1

[node name="BackButton" parent="." index="2"]
visible = false

[node name="Tween" type="Tween" parent="." index="5"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 10 )

[connection signal="pressed" from="DialogueActorFrame2/OKButton" to="." method="_on_OKButton_pressed"]
